refactor: 코드 중복 제거 및 전반적 간소화
- OAuth2Utils 공용 클래스 추출: extractAuthInfo/extractUserId 중복 제거 (5개 컨트롤러)
- ChildController, UserController try-catch 제거: GlobalExceptionHandler 위임
- ChildService, UserService 불필요한 null 방어 코드 제거 (JWT 보장)
- EntityNotFoundException 제거: CustomException(USER_NOT_FOUND/CHILD_NOT_FOUND)으로 통일
- Collectors.toList() → .toList() 통일 (4개 서비스)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>